<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.silver.dan.stockcast.TwoLineSettingItem
            android:id="@+id/chart_range_btn"
            android:layout_width="match_parent"
            app:headerText="@string/chartRange"
            app:subHeaderText="@string/s1_month"
            android:layout_height="wrap_content"/>

        <include layout="@layout/setting_line_break" />

        <com.silver.dan.stockcast.TwoLineSettingItem
            android:id="@+id/displayModeSetting"
            android:layout_width="match_parent"
            app:headerText="@string/displayMode"
            app:subHeaderText="@string/loading"
            android:layout_height="wrap_content"/>

        <include layout="@layout/setting_line_break" />

        <com.silver.dan.stockcast.TwoLineSettingItem
            android:id="@+id/slideshowDuration"
            android:layout_width="match_parent"
            app:headerText="@string/slideshowDuration"
            app:subHeaderText="@string/loading"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>